fix: remove incorrect display on mobiles(tasks)

--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -255,6 +255,8 @@
         @include little-screen {
             justify-content: space-around;
             flex-wrap: wrap;
+            border-right: none;
+            width: 80%;
         }
     }
 
